# cube

./: .gitignore  README.md  meson.build  xmake.lua
src/: cube.cpp  cube.hpp  main.cpp  term.hpp
